Final Project Update
Updating

--- a/css/about.css
+++ b/css/about.css
@@ -1,5 +1,7 @@
 #write-up {
   background-image: url('../images/img2_3.jpg');
+  background-size: cover;
+  background-attachment: fixed;
   max-width: 1280px;
   display: block;
   text-decoration: none;
@@ -23,13 +25,13 @@
   overflow: auto;
 }
 
-#blurb {
+#about-blurb {
   font-size: 25px;
   float: right;
-  color: white;
   display: inline;
+  color: black;
   width: 75%;
-  background-color: grey;
+  background:rgba(255,255,255,0.5);
   border-radius: 4px;
   padding-top: 5px;
   padding-bottom: 5px;
@@ -39,10 +41,6 @@
 
 #h1 {
   text-align: center;
-}
-
-#about_carole {
-  background-color:    #CCCCCC;
 }
 
 @media screen and (max-width:850px) {
