--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@ body {
     margin: 0 0 200px; /* bottom = footer height */
     padding: 25px;
     margin:0;
-    background: #eee;
+    background: white;
 }
 
 footer {
@@ -52,14 +52,6 @@ h1 {
 #page-header {
   background-image: linear-gradient(-100deg, rgba(255, 255, 255, 0), blue 85%, rgba(255, 255, 255, 0));
   height: 135px;
-}
-
-#page-header h1 a {
-  float: left;
-  color: black;
-  font-size: 1em;
-  margin: 0 0 0 0;
-  text-decoration: none;
 }
 
 li.rightnav {
@@ -191,27 +183,12 @@ a.control_next {
 }
 
 
-/* contact info footer*/
-
-.contact {
-  text-align: center;
-  max-width: 1280px;
-  margin: auto;
-  margin-top: 20px;
-  border-bottom-width: 2px;
-  border-top-width: 10px;
-  border-left-width: 0px;
-  border-right-width: 0px;
-  border-style: solid;
-  border-color: black;
-  overflow: auto;
-  margin-bottom: 25px;
-  height: 200px;
-}
+/*footer color*/
 
 #highlight {
   background-image: linear-gradient(-100deg, rgba(255, 255, 255, 0), red 85%, rgba(255, 255, 255, 0));
   width: 100%;
+  height: 200px;
 }
 
 @media screen and (max-width:900px) {
@@ -243,4 +220,6 @@ a.control_next {
     display: none;
   }
 }
-
+@media screen and (max-width:375px) {
+  #page-header {height: 150px;}
+  }
